--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: 3.8
       
    
       - name: Install dependencies
@@ -19,7 +19,7 @@ jobs:
           python -m pip install --upgrade pip wheel
           pip install black
           pip install --upgrade numpy ipython jupyter
-          pip install jupytext jupyterthemes pygraphviz
+          pip install jupytext jupyterthemes
           python setup.py install
           
           
