--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           pip install black
-          pip install --upgrade numpy ipython jupyter cython astropy
+          pip install --upgrade numpy ipython jupyter cython astropy astromodels
           pip install jupytext jupyterthemes
           python setup.py install
           
