--- a/.github/workflows/test_and_upload.yml
+++ b/.github/workflows/test_and_upload.yml
@@ -41,6 +41,10 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install --upgrade astromodels
+                  git clone https://github.com/threeML/threeML
+                  cd threeML
+                  python setup.py install
+                  cd ../
                   pip install --upgrade flake8 coverage pytest-cov cython
                   pip install -e .
             - name: Lint with flake8
