--- a/.github/workflows/test_and_upload.yml
+++ b/.github/workflows/test_and_upload.yml
@@ -40,6 +40,7 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
+                  pip install numpy numba
                   
                   git clone --branch dev https://github.com/threeML/astromodels
                   cd astromodels
